# taxi_prediction_fullstack_lucas_lindh

./: .gitignore  README.md  pyproject.toml
src/taxipred/backend/: api.py  data_processing.py
src/taxipred/backend/models/: preprocesser.joblib  preprocessor.joblib
src/taxipred/data/: clean_taxi_data.csv
src/taxipred/frontend/: app.py
src/taxipred/frontend/pages/: home.py  map.py  predict.py
src/taxipred/model_development/: clean_taxi_data.csv  eda.ipynb  model_dev.ipynb
src/taxipred/utils/: constants.py
